--- a/index.html
+++ b/index.html
@@ -9,8 +9,19 @@
         <!-- styles -->
         <link rel="stylesheet" href="./stylesheets/generic.css">
         <link rel="stylesheet" href="./stylesheets/kcounter.css">
+        <link rel="stylesheet" href="./stylesheets/header.css">
     </head>
     <body>
-        <h1>Days left:</h1>
+        <!--before scripts-->
+        <noscript><p>Your browser does not support Javascript!</p></noscript>
+        <script src="./scripts/customElements.js"></script>
+        <!--page top-->
+        <my-header></my-header>
+        <!-- counter display -->
+        <main>
+            <section class="counter">
+                <h1>0 days</h1>
+            <section>
+        </main>
     </body>
 </html>
