--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
         <script src="./scripts/customElements.js"></script>
         <!--page top-->
         <my-header></my-header>
-        <!-- counter display -->
+        <!--counter display-->
         <main>
             <section class="counter">
-                <h1>0 days</h1>
+                <h1 id="koboldCount">0 kobolds</h1>
             <section>
         </main>
+        <!--after scripts-->
+        <script src="./scripts/count.js"></script>
     </body>
 </html>
