--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <main>
             <section class="counter">
                 <h1 id="koboldCount">0 kobolds</h1>
-                <p id="dayTotal">[0 days]</p>
+                <p id="dayTotal"></p>
             <section>
         </main>
         <!--after scripts-->
