--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!-- info -->
-        <title>Kobold Counter</title>
+        <title>Kobold Counter!</title>
         <meta charset="UTF-8">
         <meta name="description" content="11 day counter on loop">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,6 +31,10 @@
                 </ul>
             <section>
         </main>
+        <!--footer-->
+        <footer>
+            <p><a href="./about.html">What is this page?</a></p>
+        </footer>
         <!--after scripts-->
         <script src="./scripts/count.js"></script>
     </body>
