--- a/about.html
+++ b/about.html
@@ -30,13 +30,15 @@
         <div class="infoBox">
             <article>
                 <h1>Why?</h1>
-                <p>Funny.</p>
+                <p>
+                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ipGCZ8lzfGE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </p>
             </article>
         </div>
         </main>
         <!--footer-->
         <footer>
-            <p><a href="./index.html">Back to counter</a></p>
+            <p><a href="./index.html">Back to counter!</a></p>
         </footer>
     </body>
 </html>
