--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <!-- info -->
         <title>Kobold Counter?</title>
         <meta charset="UTF-8">
-        <meta name="description" content="11 day counter on loop">
+        <meta name="description" content="What is the Kobold Counter?">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- styles -->
         <link rel="stylesheet" href="./stylesheets/generic.css">
