--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <ul>
                     <li>
                         <h1 id="koboldCount">0 kobolds</h1>
+                        <h3 id="neosKoboldCount">0 kobolds</h3>
                     </li>
 
                     <li>
@@ -36,6 +37,6 @@
             <p><a href="./about.html">What is this page?</a></p>
         </footer>
         <!--after scripts-->
-        <script src="./scripts/count.js"></script>
+        <script src="./scripts/neosCount.js"></script>
     </body>
 </html>
