need to update later

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
                 <ul>
                     <li>
                         <h1 id="koboldCount">0 kobolds</h1>
-                        <h3 id="neosKoboldCount">0 kobolds</h3>
+                        <p class="smallText" id="dayTotal">0 days since I've started Resonite</p>
                     </li>
 
                     <li>
-                        <p id="dayTotal"></p>
+                        <h3 id="neosKoboldCount">0 kobolds</h3>
+                        <p class="smallText" id="neosDayTotal"></p>
                     </li>
                 </ul>
             <section>
