Legacy kobolds no longer update

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </li>
 
                     <li>
-                        <h3 id="neosKoboldCount">0 kobolds</h3>
+                        <h3 id="neosKoboldCount">98 legacy kobolds</h3>
                         <p class="smallText" id="neosDayTotal"></p>
                     </li>
                 </ul>
